--- a/chapter6.ipynb
+++ b/chapter6.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "1.25"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -142,6 +142,54 @@
     "W = [8,-10]\n",
     "show_logistic(W)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 交差エントロピ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\takum\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: invalid value encountered in log\n",
+      "  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def cee_logistic(w,x,t):\n",
+    "    y = logistic(x,w)\n",
+    "    cee = 0\n",
+    "    \n",
+    "    for n in range(len(y)):\n",
+    "        cee = cee - (t[n]*np.log(y[n] + (1 - t[n])*np.log(1 - y[n])))\n",
+    "    \n",
+    "    cee = cee / X_n\n",
+    "    return cee\n",
+    "\n",
+    "# test\n",
+    "W=[1,1]\n",
+    "cee_logistic(W,X,T)\n",
     "\n"
    ]
   }
