--- a/chapter6.ipynb
+++ b/chapter6.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "1.25"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -158,17 +158,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\takum\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:6: RuntimeWarning: invalid value encountered in log\n",
-      "  \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "nan"
+       "1.0288191541851066"
       ]
      },
      "execution_count": 5,
@@ -182,15 +174,14 @@
     "    cee = 0\n",
     "    \n",
     "    for n in range(len(y)):\n",
-    "        cee = cee - (t[n]*np.log(y[n] + (1 - t[n])*np.log(1 - y[n])))\n",
+    "        cee = cee - (t[n] * np.log(y[n]) + (1 - t[n])*np.log(1 - y[n]))\n",
     "    \n",
     "    cee = cee / X_n\n",
     "    return cee\n",
     "\n",
     "# test\n",
     "W=[1,1]\n",
-    "cee_logistic(W,X,T)\n",
-    "\n"
+    "cee_logistic(W,X,T)"
    ]
   }
  ],
